updated package and dockerfile

--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "yoga-app",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 0"
+    "test": "echo \"Error: no test specified\" && exit 0",
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
